add singapore power map

--- a/db/families.yaml
+++ b/db/families.yaml
@@ -271,6 +271,31 @@ families:
     - person: lee-seo-hyun
       generation: 3
       role: member
+  lee-singapore:
+    origin: Singapore
+    founder: lee-kuan-yew
+    sector: politics, finance, state control
+    generations: 4
+    status: active
+    members:
+    - person: lee-kuan-yew
+      generation: 1
+      role: founder
+    - person: lee-hsien-loong
+      generation: 2
+      role: heir
+    - person: ho-ching
+      generation: 2
+      role: spouse
+    - person: lee-hsien-yang
+      generation: 2
+      role: member
+    - person: lee-wei-ling
+      generation: 2
+      role: member
+    - person: li-hongyi
+      generation: 3
+      role: member
   marinho:
     origin: Brazil
     founder: irineu-marinho
